# replication-package

./: .gitattributes  .gitignore  .gitmodules  INSTALL.md  LICENSE  README.md  REQUIREMENTS.md  Vagrantfile  provision.sh
experiments/: Pipfile  plot.py
experiments/android/: android_results.csv
experiments/overall/: macro-10.csv  macro-3.csv  macro.xlsx  micro-10.csv  micro-3.csv  micro.xls
experiments/scaling/: import_scaling.py  scaling_data.csv  scaling_sheet.xlsx
implementation/android/: Pipfile  README.md
implementation/mockdown/: Pipfile  setup.cfg
implementation/mockdown/src/mockdown/: cli.py  run.py
implementation/mockdown/src/mockdown/learning/noisetolerant/: learning.py
implementation/mockdown/src/mockdown/pruning/: blackbox.py  types.py
implementation/web/: Pipfile  README.md  arrays.json  bench.sh  bench_bench.sh  plot.html  (+12 more)
layouts/: ace-editor.json  ace-option-dropdown.json  ace-option-toggle.json  ace-sidebar-logo.json  ace.json  centered.json  conference-dates.json  conference-photos.json  conference-tracks.json  conference.json  ddg-large-blurb.json  ddg-logo.json  ddg.json  fwt-main-footer.json  fwt-main-logo.json  fwt-main.json  fwt-posts-12.json  fwt-posts-3.json  fwt-posts-9.json  fwt-running-content.json  fwt-running-header.json  fwt-space-featured.json  fwt-space-header.json  fwt-space-navigation.json  fwt-space-vids.json  fwt-space.json  fwt-yoga.json  hn-footer.json  hn-header.json  hn-post.json  hn-posts.json  hn-search.json  personal-bio.json  personal-navigation.json  personal-pubs.json  personal.json
supplement/: README.md
(+104 files in other folders)
