[metadata]
name = mockdown
version = attr: mockdown.VERSION
description = 'Robustly generating constraint-based layouts from examples.'
long_description = file:README.md, LICENSE
long_description_content_type = 'text/markdown'

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    click
    intervaltree
    more-itertools
    pyswip
    uvicorn
    starlette
    aiofiles
    timing-asgi
    z3-solver
    jinja2
    pandas
    numpy
    sympy
    pathos
    statsmodels
    kiwisolver
    setuptools_rust
    cryptography>=1.3.4
setup_requires =
    pytest-runner
python_version = = 3.8

[options.package_data]
mockdown = ['py.typed', '**/*.pl']

[options.packages.find]
where = src

[mypy]
python_version = 3.8
mypy_path = src